--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 lang: en
-title: Bulma Clean Theme
-tagline: Bulma Clean Theme
+title: WyldenCo
+tagline: WyldenCo
 email: your-email@domain.com
 description: >
   The demo site for Bulma Clean Theme, made for Jekyll and GitHub pages websites
@@ -12,7 +12,7 @@ permalink: pretty
 gh_sponsor: chrisrhymes
 #hide_share_buttons: true
 #theme_color: '#eeeeee'
-#fixed_navbar: top
+fixed_navbar: top
 
 paginate: 5
 paginate_path: "/blog/page:num"
