--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,37 +1,27 @@
-- name: Pages
-  link: /#
-  dropdown:
-    - name: Page With Sidebar
-      link: /page-1/
-    - name: Page No Sidebar
-      link: /page-2/
-    - name: Page With Menubar
-      link: /page-3/
-    - name: Page With Tabs
-      link: /page-4/
-    - name: Page Without Footer
-      link: /page-5/
-    - name: Page Without Hero
-      link: /page-without-hero/
-    - name: Page With Contents
-      link: /page-with-contents/
-    - name: Page With Video
-      link: /page-with-video/
-    - name: Page With Image Modal
-      link: /page-with-image-modal/
-    - name: Page With Notifications
-      link: /page-with-notification/
-    - name: Landing Page With Callouts
-      link: /landing/
-    - name: Sponsors Page
-      link: /sponsors/
-    - name: Image Gallery
-      link: /gallery/
-    - name: Recipe Page
-      link: /example-recipe/
-- name: Products
-  link: /products/
-- name: Showcase
-  link: /showcase/
 - name: Blog
   link: /blog/
+- name: Nature
+  link: /nature/
+  dropdown:
+    - name: Regenerative Farming
+      link: /regerative-farming/
+    - name: Cannabis Cultivation
+      link: /cannabis-cultivation/
+- name: Art
+  link: /art/
+  dropdown:
+    - name: Art Projects
+      link: /art-projects
+    - name: Featured Artists
+      link: /featured-artists
+- name: Music
+  link: /music/
+  dropdown:
+    - name: Learn to Play
+      link: /learn-to-play
+    - name: Musical Guests
+      link: /musical-guests
+- name: Shop
+  link: /products/
+- name: About
+  link: /about/
